[gd_scene load_steps=21 format=2]

[ext_resource path="res://entities/enemies/eye_boss_veins.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/eye_boss_pupil.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/eye_boss_base.png" type="Texture" id=3]
[ext_resource path="res://entities/enemies/eye_boss_mask.png" type="Texture" id=4]
[ext_resource path="res://entities/enemies/eye_boss.gd" type="Script" id=5]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=6]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=7]
[ext_resource path="res://fsm/states/eye_boss_idle.gd" type="Script" id=8]
[ext_resource path="res://fsm/states/eye_boss_attacc_shoot.gd" type="Script" id=9]
[ext_resource path="res://fsm/states/eye_boss_attacc_laser.gd" type="Script" id=10]
[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://fsm/states/eye_boss_attacc_dive.gd" type="Script" id=12]
[ext_resource path="res://fsm/states/eye_boss_stunned.gd" type="Script" id=13]
[ext_resource path="res://fsm/states/eye_boss_attacc_guns.gd" type="Script" id=14]
[ext_resource path="res://entities/enemies/data/eyesaac.tres" type="Resource" id=15]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D mask;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	
	vec2 muv = UV;
	muv.y = 1.0 - muv.y;
	
	COLOR.a *= texture(mask, muv).r;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/mask = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="CircleShape2D" id=4]
radius = 512.0

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[node name="eye_boss" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 5 )
can_flip_by_default = false
never_flips = true
gravity_active = false
can_be_bounced = false
can_bounce = false
title = "Eyesaac"
subtitle = "The One Whomst Sees"
max_hp = 12.0
saving_enabled = false
boss_theme = "great_opposition"
enemy_data = ExtResource( 15 )

[node name="base" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 3 )

[node name="veins" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="pupil" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 6 )
animator_path = NodePath("../animator")

[node name="idle" type="Node" parent="fsm"]
script = ExtResource( 8 )

[node name="attacc_shoot" type="Node" parent="fsm"]
script = ExtResource( 9 )
auto_proceed = "idle"
duration = 5.0

[node name="attacc_laser" type="Node" parent="fsm"]
script = ExtResource( 10 )
auto_proceed = "idle"

[node name="attacc_dive" type="Node" parent="fsm"]
script = ExtResource( 12 )
auto_proceed = "stunned"

[node name="stunned" type="Node" parent="fsm"]
script = ExtResource( 13 )
auto_proceed = "idle"
duration = 2.0

[node name="attacc_guns" type="Node" parent="fsm"]
script = ExtResource( 14 )
auto_proceed = "idle"
duration = 8.0

[node name="animator" type="AnimationPlayer" parent="."]

[node name="entity_detector" parent="." instance=ExtResource( 7 )]

[node name="hitbox" type="CollisionShape2D" parent="entity_detector"]
visible = false
shape = SubResource( 4 )

[node name="barrel" type="Position2D" parent="."]
position = Vector2( 0, 32 )

[node name="dive_hurtbox" parent="." instance=ExtResource( 11 )]
position = Vector2( 0, 8 )
hit_rate = 1.0

[node name="hitbox" type="CollisionShape2D" parent="dive_hurtbox"]
visible = false
shape = SubResource( 5 )

[node name="mattress_detector" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="mattress_detector"]
visible = false
position = Vector2( 0, 8 )
shape = SubResource( 5 )

[connection signal="damage_taken" from="." to="fsm/attacc_guns" method="_on_father_damage_taken"]
[connection signal="updated" from="entity_detector" to="." method="_on_entity_detector_updated"]
